--- a/index.html
+++ b/index.html
@@ -4,9 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="./script.js" defer></script>
+    <link rel="stylesheet" href="./style.css">
     <title>Minion Speak</title>
 </head>
 <body>
-    <h1>Minion Speak</h1>
+    <nav>
+        <h1>Minion Speak</h1>
+    </nav>
+    
+    <main>
+        <textarea class="input" placeholder="Put your message here and get it converted into minion language..."></textarea>
+        <button>Translate To Minion</button>
+
+        <div class="output">
+            <h5>Translated Minion text here 👇</h5>
+            <textarea class="content"></textarea>
+        </div>
+    </main>
+
+    <footer>
+        <div class="about">
+            <h2>About</h2>
+            <p>Are you a fan of minions? Did you know that the gibberish they say is an actual language. Use the translator to convert your text from English to Minion speak or Banana language.</p>
+        </div>
+    </footer>
 </body>
 </html>
