--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <footer>
         <div class="about">
             <h2>About</h2>
-            <p>Are you a fan of minions? Did you know that the gibberish they say is an actual language. Use the translator to convert your text from English to Minion speak or Banana language.</p>
+            <p>Are you a fan of minions? Did you know that the gibberish they say is an actual language. Use the translator to convert your text from English to Minion speak.</p>
         </div>
     </footer>
 </body>
