--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     </nav>
     
     <main>
+        <img src="./images/minions-clipart.png" alt="minion">
         <textarea class="input" placeholder="Put your message here and get it converted into minion language..."></textarea>
         <button>Translate To Minion</button>
 
