--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="about">
             <h2>About</h2>
             <p>Are you a fan of minions? Did you know that the gibberish they say is an actual language. Use the translator to convert your text from English to Minion speak.</p>
-            <small id="small">Bulit with ♥ by <a href="https://github.com/minku-singh"> Minku Singh</a></small>
+            <small id="small">Bulit with ♥ by <a style="margin-left: 3px;" href="https://github.com/minku-singh"> Minku Singh </a></small>
         </div>
     </footer>
 </body>
